# NaRSearch

./: docker-compose.yml
backend/: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test.py
backend/alembic/: env.py
backend/alembic/versions/: 507cab91f330_initial_migration.py  9c1aaa6b8755_describe_your_changes.py
backend/cores/: settings.py  settings.yaml
backend/cores/agents/: research.py
backend/cores/pg/: conversation.py  model.py
backend/cores/services/: llm_invoker.py  rate_limit.py
backend/cores/services/web_discovery/: service.py  settings.py
backend/libs/base/: pyproject.toml
backend/libs/base/src/base/: __init__.py  base_model.py  base_service.py
backend/tests/: test.py  test_lead_agent_basic.py
