[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "base",
    "crawl4ai>=0.7.8",
    "loguru>=0.7.3",
    "pydantic-ai>=1.39.1",
]

[tool.uv.workspace]
members = [
    "libs/base",
]

[tool.uv.sources]
base = { workspace = true }
