[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.0",
    "base",
    "crawl4ai>=0.7.8",
    "loguru>=0.7.3",
    "psycopg2>=2.9.11",
    "pydantic-ai>=1.39.1",
    "sqlalchemy>=2.0.45",
    "sqlmodel>=0.0.31",
]

[tool.uv.workspace]
members = [
    "libs/base",
]

[tool.uv.sources]
base = { workspace = true }
